# mySTRUCK

./: CMakeLists.txt  README.md
src/: main.cpp  struck_tracking.cpp
